--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://...
+MONGO_URI=mongodb://veloss:1q2w3e4r@ds121982.mlab.com:21982/example
 SHA256_SALT=sdsd21*&(&981232djkjvcklx%^^@%&2432
 PORT=8080
